# news_scraping

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  Makefile  PROMPT.md  README.md  architecture.html  cron-setup-guide.html  pyproject.toml  setup-guide.html
.claude/skills/vision-intake/: SKILL.md
.github/workflows/: daily-digest.yml
docs/features/2026-05-23-fast-tasks-admin-polish/: admin-polish-tasks.md
docs/features/2026-05-24-admin-send-schedule/: admin-send-schedule-implementation-plan.md  admin-send-schedule-requirements.md  admin-send-schedule-tech-design.md
domains/ai_news/: keywords.yaml  sources.yaml
src/ai_news_scraping/: __init__.py  __main__.py  admin.py  cli.py  config.py  domain_config.py  extract.py  mail.py  pipeline.py  run_store.py  scrape_state_store.py  search.py  search_config_loader.py  search_config_store.py  store.py  subscriber_store.py  summarize.py
supabase/: README.md
supabase/migrations/: 0001_initial_schema.sql  0002_search_admin.sql  0003_source_description.sql  0004_send_schedule.sql  0005_max_per_source.sql
templates/: admin.html
tests/: conftest.py  test_admin.py  test_cli.py  test_config.py  test_domain_config.py  test_extract.py  test_mail.py  test_pipeline.py  test_pipeline_smoke.py  test_run_store.py  test_schema.py  test_scrape_state_store.py  test_search.py  test_search_config_loader.py  test_search_config_store.py  test_search_path_prefix_ac.py  test_send_schedule_ac.py  test_smoke.py  test_store.py  test_subscriber_store.py  test_summarize.py  test_workflow.py
(+4 files in other folders)
