[project]
name = "ai-news-scraping"
version = "0.1.0"
description = "Daily AI news scraper that emails a Korean trend digest to a small group via GitHub Actions cron"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "supabase>=2.30.0",
    "trafilatura>=2.0.0",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_news_scraping"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = ["src", "tests"]
